# fastapi-template

./: .dockerignore  .env.dist  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.core  Dockerfile.deploy  Makefile  README.md  docker-compose.yaml  docker-entrypoint.sh  main.py  newrelic.ini  pyproject.toml  pytest.ini
.circleci/: config.yml
alembic/: env.py
alembic/versions/: 3f120ae55803_initial_db.py  63c5fa4cbae0_add_invitation_sent.py  ae7ba8d59217_create_initial_databases.py  de698966a650_initial_db.py  eb05f124deb3_initial_db.py
app/: constants.py  exceptions.py  tasks.py
app/api/: deps.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: login.py  users.py
app/core/: base.py  base_class.py  celery_app.py  config.py  init_db.py  security.py  session.py
app/models/: __init__.py  user.py
app/providers/: base.py  user.py
app/schemas/: __init__.py  base.py  user.py
app/utils/: auth.py  currency.py  email.py  files.py  format.py
scripts/: backend_pre_start.py  dev  init.sh  initial_data.py
tests/: conftest.py  test_tasks.py
tests/api/v1/endpoints/: test_login.py
tests/factories/: user.py
tests/providers/: test_user.py
tests/utils/: auth.py  random.py  test_format.py  user.py
